[workspace]
resolver = "2"
members = [
    "rustdb"
]
[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
async-stream = "0.3.5"
bytes = "1.5"
futures = "0.3.30"
indexmap = "2.2"
nom = "7.1.3"
ordered-float = "4.2.0"
serde = "1.0.203"
tokio = "1.36"
thiserror = "1.0"
tempfile = "3.10.1"